Added circular log server & improved WiFI management

--- a/platformio.ini
+++ b/platformio.ini
@@ -23,3 +23,6 @@ monitor_speed = 115200
 build_flags =
     -D WIFI_SSID="\"<WiFi-Name>\""
     -D WIFI_PASSWORD="\"<WiFi-Password>\""
+    -D WIFI_RECONNECT_INTERVAL=60000
+    -D ENABLE_LOG_SERVER=false
+    -D MAX_LOG_ENTRIES=25
