Added logging levels

--- a/platformio.ini
+++ b/platformio.ini
@@ -24,5 +24,5 @@ build_flags =
     -D WIFI_SSID="\"<WiFi-Name>\""
     -D WIFI_PASSWORD="\"<WiFi-Password>\""
     -D WIFI_RECONNECT_INTERVAL=60000
-    -D ENABLE_LOG_SERVER=false
+    -D ENABLE_LOG_SERVER=true
     -D MAX_LOG_ENTRIES=200
