--- a/platformio.ini
+++ b/platformio.ini
@@ -8,21 +8,33 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:arduino_nano_esp32]
+[platformio]
+default_envs = remoteOTA
+
+[common]
 platform = espressif32
 board = arduino_nano_esp32
 framework = arduino
+monitor_port = COM4
+monitor_speed = 115200
+build_flags = 
+    -D WIFI_SSID="\"<WiFi-Name>\""
+    -D WIFI_PASSWORD="\"<WiFi-Password>\""
+	-D WIFI_RECONNECT_INTERVAL=60000
+	-D ENABLE_LOG_SERVER=true
+	-D MAX_LOG_ENTRIES=200
 
+[env:remoteOTA]
+extends = common
 upload_port = <ip-address>
 upload_protocol = espota
 
-monitor_port = COM4
-monitor_speed = 115200
+[env:localBootCOM3]
+extends = common
+upload_port = COM3
+upload_protocol = esptool
 
-; Define build variables for Wi-Fi credentials
-build_flags =
-    -D WIFI_SSID="\"<WiFi-Name>\""
-    -D WIFI_PASSWORD="\"<WiFi-Password>\""
-    -D WIFI_RECONNECT_INTERVAL=60000
-    -D ENABLE_LOG_SERVER=true
-    -D MAX_LOG_ENTRIES=200
+[env:localBootCOM4]
+extends = common
+upload_port = COM4
+upload_protocol = esptool
