Adding support for web notifications

--- a/platformio.ini
+++ b/platformio.ini
@@ -20,6 +20,7 @@ monitor_speed = 115200
 build_flags = 
     -D WIFI_SSID="\"<WiFi-Name>\""
     -D WIFI_PASSWORD="\"<WiFi-Password>\""
+	-D NOTIFY_RUN_CHANNEL_1="\"<Channel-ID>\""
 	-D WIFI_RECONNECT_INTERVAL=60000
 	-D ENABLE_LOG_SERVER=true
 	-D MAX_LOG_ENTRIES=200
