Added ActivitySense, additional build flags, cleanup

--- a/platformio.ini
+++ b/platformio.ini
@@ -18,16 +18,22 @@ framework = arduino
 monitor_port = COM4
 monitor_speed = 115200
 build_flags = 
-    -D WIFI_SSID="\"<WiFi-Name>\""
-    -D WIFI_PASSWORD="\"<WiFi-Password>\""
-	-D NOTIFY_RUN_CHANNEL_1="\"<Channel-ID>\""
+	-D WIFI_SSID="\"<WiFi-Name>\""
+	-D WIFI_PASSWORD="\"<WiFi-Password>\""
 	-D WIFI_RECONNECT_INTERVAL=60000
+
+	-D ENABLE_HEARTBEAT_LOG=false
+
 	-D ENABLE_LOG_SERVER=true
 	-D MAX_LOG_ENTRIES=200
 
+	-D ENABLE_ACTIVITY_SENSE=true
+	-D NOTIFY_RUN_CHANNEL_ACTIVITY_SENSE="\"<Channel-ID>\""
+	-D DISTANCE_THRESHOLD_INCHES=6
+
 [env:remoteOTA]
 extends = common
-upload_port = <ip-address>
+upload_port = <IP-Address>
 upload_protocol = espota
 
 [env:localBootCOM3]
