Fixing bug with time in logs

--- a/platformio.ini
+++ b/platformio.ini
@@ -21,6 +21,7 @@ build_flags =
 	-D WIFI_SSID="\"<WiFi-Name>\""
 	-D WIFI_PASSWORD="\"<WiFi-Password>\""
 	-D WIFI_RECONNECT_INTERVAL=60000
+	-D TIMEZONE="\"EST5EDT,M3.2.0,M11.1.0\""
 
 	-D ENABLE_HEARTBEAT_LOG=false
 
