Made HTTP/NotifyRun singleton services + added pretty JSON to log server + transaction UUID logging

--- a/platformio.ini
+++ b/platformio.ini
@@ -36,13 +36,22 @@ build_flags =
 extends = common
 upload_port = <IP-Address>
 upload_protocol = espota
+lib_deps = 
+	robtillaart/UUID@^0.1.6
+	bblanchon/ArduinoJson@^7.2.0
 
 [env:localBootCOM3]
 extends = common
 upload_port = COM3
 upload_protocol = esptool
+lib_deps = 
+	robtillaart/UUID@^0.1.6
+	bblanchon/ArduinoJson@^7.2.0
 
 [env:localBootCOM4]
 extends = common
 upload_port = COM4
 upload_protocol = esptool
+lib_deps = 
+	robtillaart/UUID@^0.1.6
+	bblanchon/ArduinoJson@^7.2.0
